[gd_scene load_steps=15 format=2]

[ext_resource path="res://Enemies/enemy_ant_placeholder.png" type="Texture" id=1]
[ext_resource path="res://Collision/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Healthbar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/EnemyStats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Collision/AntHurtbox.gd" type="Script" id=5]
[ext_resource path="res://Enemies/AntEnemy.gd" type="Script" id=6]
[ext_resource path="res://Projectiles/EnemyProjectileSpawner.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/ScentRay.tscn" type="PackedScene" id=8]
[ext_resource path="res://Fonts/pixeltype.ttf" type="DynamicFontData" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.0
height = 22.5

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.3349
height = 25.9323

[sub_resource type="CapsuleShape2D" id=3]
radius = 27.3543

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=5]
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="AntEnemy" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 6 )
FRICTION = 700

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 4
script = ExtResource( 5 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0.192157, 0.192157, 0.192157, 1 )
shape = SubResource( 3 )

[node name="Healthbar" parent="." instance=ExtResource( 3 )]
margin_left = -32.0
margin_top = 40.0452
margin_right = 32.0
margin_bottom = 52.0452
max_value = 10.0
value = 10.0

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]

[node name="EnemyProjectileSpawner" parent="." instance=ExtResource( 7 )]

[node name="ScentRay" parent="." instance=ExtResource( 8 )]
visible = false
enabled = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 0, 0, 0, 0 )
width = 2.0

[node name="StateLabel" type="Label" parent="."]
visible = false
margin_left = -22.8811
margin_top = -57.1784
margin_right = 22.1189
margin_bottom = -42.1784
custom_fonts/font = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="IdleTimer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dying = SubResource( 5 )

[node name="SprintMovementTween" type="Tween" parent="."]

[node name="SprintDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="health_changed" from="EnemyStats" to="." method="_on_EnemyStats_health_changed"]
[connection signal="health_zero" from="EnemyStats" to="." method="_on_EnemyStats_health_zero"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]

[editable path="Hurtbox"]
[editable path="EnemyProjectileSpawner"]
